  * fmt_ptime.c: create timestamps in UTC, not localtime.
  * chpst.c: -e dir: silently ignore directories, print warning if verbose.

runit 1.0.0
Tue, 10 Feb 2004 13:37:28 +0000
  * doc/benefits.html, doc/dependencies.html, doc/index.html,
    doc/replaceinit.html, doc/runlevels.html, doc/upgrade.html,
    doc/useinit.html: cleanup; minor.
  * man/utmpset.8: run utmpset in finish script, not run script.
  * man/runsvdir.8: minor.

runit 0.13.1
Mon, 19 Jan 2004 18:32:58 +0000
  * doc/upgrade.html: typo.
  * svlogd.c: bugfix: properly print new-line character to the log on end
    of line (thx Pawel Chmielowski).
  * trysocketlib.c: new; check for libraries needed for socket() on some
    systems (fixes link failure on solaris, thx Uffe Jakobsen).
  * Makefile: adapt.
  * print-cc.sh, print-ld.sh: head -1 -> head -n1.

runit 0.13.0
Mon, 12 Jan 2004 14:39:38 +0000
  * doc/runscripts.html: use html named entities (thx Taj Khattra); add
    more contributed run scripts (thx Marek Bartnikowski, Thomas Schwinge).
  * svlogd.c: support sending log entries to remote host through udp,
    configurable through u and U lines in log dir config file; minor.
  * man/svlogd.8: adapt; document -tt option.
  * package/compile, package/install-man, package/upgrade: exit 1 on
    sub-shell failures.
  * man/runsv.8: fix typos (thx Christian Hammers).

runit 0.12.1
Tue, 18 Nov 2003 15:42:44 +0000
  * doc/runscripts: add pppd run script (with chpst) next to the ppp one.
  * man/chpst.8: typo.
  * etc/debian/3: test -r -> test -x (thx Alejandro Mery).
  * runsv.c: don't start new processes while collecting children.

runit 0.12.0
Wed, 29 Oct 2003 18:27:48 +0000
  * runsv.c: don't use EOVERFLOW as it is not standard (thx Christoph
    Scheurer).
  * reboot_system.h1, reboot_system.h2, tryreboot.c: new; test if reboot()
    function takes one or two arguments (solaris).
  * runit.c: fallthrough stage 3: re-get stderr; sync() before reboot().